--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -52,7 +52,8 @@
             android:hint="enter your full name"
             android:inputType="textPersonName"
             android:padding="6dp"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/textView_register_email"
@@ -73,12 +74,11 @@
             android:layout_below="@id/textView_register_email"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-
-            android:background="@android:color/transparent"
+            android:background="@drawable/border"
             android:hint="enter your email address"
             android:inputType="textEmailAddress"
             android:padding="6dp"
-
+            android:textColor="@color/black"
             android:textSize="16sp" />
 
         <TextView
@@ -87,7 +87,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/editText_register_email"
             android:padding="6dp"
-            android:text="Date of Birth (dd/mm/yyyy)*" />
+            android:text="Date of Birth (dd/mm/yyyy)*"
+            android:textColor="#555555"
+            />
 
 
         <EditText
@@ -98,7 +100,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
 
-            android:background="@android:color/transparent"
+            android:background="@drawable/border"
             android:hint="select your dob"
             android:inputType="date"
             android:padding="6dp"
@@ -111,7 +113,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/editText_register_dob"
             android:padding="6dp"
-            android:text="Gender*" />
+            android:text="Gender*"
+            android:textColor="#555555"/>
 
 
         <RadioGroup
@@ -149,7 +152,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/radio_group_register_gender"
             android:padding="6dp"
-            android:text="Mobile*" />
+            android:text="Mobile*"
+            android:textColor="#555555"/>
 
 
         <EditText
@@ -160,7 +164,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
 
-            android:background="@android:color/transparent"
+            android:background="@drawable/border"
             android:hint="enter your mobile no. "
             android:inputType="phone"
             android:padding="6dp"
@@ -216,7 +220,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/spinner_bangladesh_districts"
             android:padding="6dp"
-            android:text="Password*" />
+            android:text="Password*"
+            android:textColor="#555555"
+            />
 
         />
 
@@ -228,7 +234,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
 
-            android:background="@android:color/transparent"
+            android:background="@drawable/border"
             android:hint="enter your password"
             android:inputType="textPassword"
             android:padding="6dp"
@@ -245,7 +251,8 @@
 
             android:layout_below="@id/editText_register_password"
             android:padding="6dp"
-            android:text="Confirm Password*" />
+            android:text="Confirm Password*"
+            android:textColor="#555555"/>
 
         />
 
@@ -257,7 +264,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
 
-            android:background="@android:color/transparent"
+            android:background="@drawable/border"
             android:hint="Confirm your password"
             android:inputType="textPassword"
             android:padding="6dp"
