--- a/app/src/main/res/menu/common_menu.xml
+++ b/app/src/main/res/menu/common_menu.xml
@@ -14,6 +14,8 @@
 
     <item android:title="Classify Flower"
         android:id="@+id/menu_flower_classification"/>
+    <item android:title="Watch Video"
+        android:id="@+id/menu_watch_video"/>
 
     <item android:title="Sing Out"
         android:id="@+id/menu_sign_out"/>
