--- a/app/src/main/res/menu/common_menu.xml
+++ b/app/src/main/res/menu/common_menu.xml
@@ -18,8 +18,7 @@
     <item android:title="Watch Video"
         android:id="@+id/menu_watch_video"/>
 
-    <item android:title="User List"
-        android:id="@+id/menu_user_list"/>
+
 
     <item android:title="See Map"
         android:id="@+id/menu_location"/>
@@ -28,6 +27,8 @@
         android:id="@+id/menu_reviews"/>
     <item android:title="User Panel"
         android:id="@+id/menu_user_panel"/>
+    <item android:title="Flower Library"
+        android:id="@+id/menu_flower_library"/>
 
 
     <item android:title="Sing Out"
