--- a/app/src/debug/res/drawable-anydpi/ic_send.xml
+++ b/app/src/debug/res/drawable-anydpi/ic_send.xml
@@ -3,10 +3,10 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#FFFFFF"
+    android:tint="#BB14C7"
     android:alpha="0.8"
     android:autoMirrored="true">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M21.99,4c0,-1.1 -0.89,-2 -1.99,-2L4,2c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h14l4,4 -0.01,-18zM18,14L6,14v-2h12v2zM18,11L6,11L6,9h12v2zM18,8L6,8L6,6h12v2z"/>
+      android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
 </vector>
