--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="3dp"
     app:cardElevation="3dp"
@@ -81,12 +81,28 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"></ImageView> -->
 
-        <TextView
-            android:id="@+id/pLikesTv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/purple_200"
-            android:text="1.2k Likes"></TextView>
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/pLikesTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/purple_200"
+                android:text="1.2k Likes"></TextView>
+            <TextView
+                android:id="@+id/pCommentsTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAlignment="textEnd"
+                android:layout_gravity="end"
+                android:textColor="@color/purple_200"
+                android:text="1.2k Comments"></TextView>
+
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
