--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,24 @@
 
         android:padding="15dp">
 
-        <ImageView
-            android:id="@+id/imageView_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView_logo"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:layout_marginTop="30dp"-->
+<!--            android:adjustViewBounds="true"-->
+<!--            android:maxWidth="180dp"-->
+<!--            app:srcCompat="@drawable/logo" />-->
+        <com.airbnb.lottie.LottieAnimationView
+            android:layout_width="300dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="0dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:adjustViewBounds="true"
-            android:maxWidth="180dp"
-            app:srcCompat="@drawable/logo" />
+            app:lottie_rawRes="@raw/love_letter"
+            app:lottie_autoPlay="true"
+            android:id="@+id/imageView_logo"
+            app:lottie_loop="true"/>
 
         <TextView
             android:id="@+id/textView_app_name"
