--- a/app/src/main/res/menu/common_menu.xml
+++ b/app/src/main/res/menu/common_menu.xml
@@ -32,9 +32,9 @@
 
     <item android:title="Flower Library"
         android:id="@+id/menu_flower_library"/>
-    <item android:title="Photo Gallery"
-        android:id="@+id/menu_photo_gallery"/>
 
+    <item android:title="Flower Dictionary"
+        android:id="@+id/menu_flower_dictionary"/>
 
     <item android:title="Sing Out"
         android:id="@+id/menu_sign_out"/>
