--- a/app/src/main/res/layout/activity_flower_dic.xml
+++ b/app/src/main/res/layout/activity_flower_dic.xml
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="loadNotes"
-        android:text="Load" />
+        android:text="Load Next" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
