--- a/app/src/main/res/menu/common_menu.xml
+++ b/app/src/main/res/menu/common_menu.xml
@@ -37,6 +37,10 @@
         android:id="@+id/menu_flower_dictionary"/>
     <item android:title="Contact Us"
         android:id="@+id/menu_contact_us"/>
+    <item android:title="Know Plant"
+        android:id="@+id/menu_know_plant"/>
+    <item android:title="Report"
+        android:id="@+id/menu_report"/>
 
     <item android:title="Sing Out"
         android:id="@+id/menu_sign_out"/>
