--- a/app/src/main/res/layout/activity_graph_qlmain.xml
+++ b/app/src/main/res/layout/activity_graph_qlmain.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,24 +17,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/imageView"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:text="Capture" />
+        android:text="Capture"
+        android:background="@drawable/button_background"
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/pickButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/captureButton"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
-        android:text="Pick from Gallery" />
+        android:text="Pick from Gallery"
+        android:background="@drawable/button_background"
+        android:textColor="@android:color/white" />
 
     <Button
         android:id="@+id/identifyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/pickButton"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
-        android:text="Identify Plant" />
+        android:text="Identify Plant"
+        android:background="@drawable/button_background"
+        android:textColor="@android:color/white" />
 
     <TextView
         android:id="@+id/plantNameTextView"
@@ -44,7 +52,10 @@
         android:layout_below="@id/identifyButton"
         android:layout_marginTop="16dp"
         android:text="Plant Name"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/plantDescriptionTextView"
@@ -53,6 +64,8 @@
         android:layout_below="@id/plantNameTextView"
         android:layout_marginTop="8dp"
         android:text="Plant Description"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:textColor="@android:color/black"
+        android:gravity="center_horizontal" />
 
 </RelativeLayout>
