--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light_grey"
     tools:context=".RegisterActivity">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,7 +14,6 @@
         android:background="@color/white"
         android:padding="15dp">
 
-
         <TextView
             android:id="@+id/textView_register_head"
             android:layout_width="match_parent"
@@ -26,17 +21,16 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:text="Please register yourself to continue with the amazing experience!"
-
             android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView_register_full_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textView_register_head"
-
             android:layout_marginTop="50dp"
             android:padding="6dp"
             android:text="Full Name*"
@@ -49,11 +43,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/textView_register_full_name"
             android:background="@drawable/border"
-            android:hint="enter your full name"
+            android:hint="Enter your full name"
             android:inputType="textPersonName"
             android:padding="6dp"
-            android:textSize="16sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView_register_email"
@@ -66,7 +60,6 @@
             android:textColor="#555555"
             android:textSize="16sp" />
 
-
         <EditText
             android:id="@+id/editText_register_email"
             android:layout_width="match_parent"
@@ -75,7 +68,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/border"
-            android:hint="enter your email address"
+            android:hint="Enter your email address"
             android:inputType="textEmailAddress"
             android:padding="6dp"
             android:textColor="@color/black"
@@ -89,8 +82,7 @@
             android:padding="6dp"
             android:text="Date of Birth (dd/mm/yyyy)*"
             android:textColor="#555555"
-            />
-
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/editText_register_dob"
@@ -99,12 +91,10 @@
             android:layout_below="@id/textView_register_dob"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-
             android:background="@drawable/border"
-            android:hint="select your dob"
+            android:hint="Select your dob"
             android:inputType="date"
             android:padding="6dp"
-
             android:textSize="16sp" />
 
         <TextView
@@ -114,15 +104,14 @@
             android:layout_below="@id/editText_register_dob"
             android:padding="6dp"
             android:text="Gender*"
-            android:textColor="#555555"/>
-
+            android:textColor="#555555"
+            android:textSize="16sp" />
 
         <RadioGroup
             android:id="@+id/radio_group_register_gender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textView_register_gender"
-
             android:orientation="horizontal">
 
             <RadioButton
@@ -153,8 +142,8 @@
             android:layout_below="@id/radio_group_register_gender"
             android:padding="6dp"
             android:text="Mobile*"
-            android:textColor="#555555"/>
-
+            android:textColor="#555555"
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/editText_register_mobile"
@@ -164,13 +153,10 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/border"
-            android:hint="enter your mobile no. "
+            android:hint="Enter your mobile no."
             android:inputType="phone"
             android:padding="6dp"
             android:textSize="16sp" />
-
-
-
 
         <TextView
             android:id="@+id/textView_bangladesh_division"
@@ -182,8 +168,7 @@
             android:text="Division*"
             android:textColor="#555555"
             android:focusable="true"
-            android:focusableInTouchMode="true"/>
-
+            android:focusableInTouchMode="true" />
 
         <Spinner
             android:id="@+id/spinner_bangladesh_division"
@@ -194,7 +179,7 @@
             android:background="@drawable/border"
             android:padding="6dp"
             android:textSize="16sp"
-            android:layout_below="@id/textView_bangladesh_division"/>
+            android:layout_below="@id/textView_bangladesh_division" />
 
         <TextView
             android:id="@+id/textView_bangladesh_districts"
@@ -203,7 +188,7 @@
             android:layout_below="@id/spinner_bangladesh_division"
             android:layout_marginTop="10dp"
             android:padding="6dp"
-            android:text="@string/district"
+            android:text="District*"
             android:textColor="#555555"
             android:focusable="true"
             android:focusableInTouchMode="true" />
@@ -213,12 +198,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/border"
             android:padding="6dp"
             android:textSize="16sp"
             android:layout_below="@id/textView_bangladesh_districts"/>
-
-
         <TextView
             android:id="@+id/textView_register_password"
             android:layout_width="match_parent"
@@ -227,10 +211,9 @@
             android:padding="6dp"
             android:text="Password*"
             android:textColor="#555555"
-            />
+
 
         />
-
         <EditText
             android:id="@+id/editText_register_password"
             android:layout_width="match_parent"
@@ -280,15 +263,7 @@
         />
 
 
-        <Button
-            android:id="@+id/button_register"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/editText_confirm_password"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="50dp"
-            android:text="Register" />
+
 
         <ProgressBar
             android:id="@+id/progressBarRegister"
@@ -299,9 +274,18 @@
             android:elevation="10dp"
             android:visibility="gone" />
 
+        <Button
+            android:id="@+id/button_register"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="20dp"
+            android:backgroundTint="@color/purple_500"
+            android:text="Register"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:layout_below="@id/editText_confirm_password"/>
+
 
     </RelativeLayout>
-
-
 </ScrollView>
-
