--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,6 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="2dp" android:color="#ff207d94" />
-    <corners android:radius="5dp" />
-    <solid android:color="#FFFFFF" />
+    <gradient
+        android:type="radial"
+        android:centerX="0.5"
+        android:centerY="0.5"
+        android:startColor="#9C27B0"
+    android:endColor="#673AB7"
+    android:gradientRadius="200dp"
+    />
+    <corners android:radius="12dp" /> <!-- Adjust the corner radius as per your preference -->
 </shape>
