--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -9,8 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <EditText
             android:id="@+id/ptitle"
@@ -19,17 +19,16 @@
             android:hint="Enter Title"
             android:minHeight="80dp"
             android:padding="10dp"
-            android:singleLine="true" />
-            <!--android:background="@drawable/edit" -->
+            android:singleLine="true"
+            android:background="@drawable/edit_text_background" />
 
-
-       <ImageView
+        <ImageView
             android:id="@+id/pImageIv"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginTop="15dp"/>
-           <!--  android:background="@drawable/edit"-->
-<!--            android:src="@drawable/ic_images" -->
+            android:layout_marginTop="15dp"
+            android:scaleType="centerCrop"
+             />
 
         <EditText
             android:id="@+id/pdes"
@@ -41,37 +40,35 @@
             android:inputType="textCapSentences|textMultiLine"
             android:minHeight="120dp"
             android:padding="10dp"
-            android:singleLine="true" />
-<!--            android:background="@drawable/edit"-->
+            android:singleLine="true"
+            android:background="@drawable/edit_text_background" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rate Flower Studio!"
-            android:textAppearance="?android:textAppearanceLarge"/>
-        <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ratingBar"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:textAppearanceMedium"
-            android:id="@+id/rateCount"/>
-<!--        <EditText-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:id="@+id/review"/>-->
+            android:textAppearance="?android:textAppearanceLarge" />
 
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/rateCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceMedium" />
 
         <Button
             android:id="@+id/pupload"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="20dp"
             android:text="Upload"
-             />
+            android:background="@drawable/button_background"/>
     </LinearLayout>
 
 </ScrollView>
