--- a/app/src/main/res/layout/activity_flower_classification.xml
+++ b/app/src/main/res/layout/activity_flower_classification.xml
@@ -16,20 +16,21 @@
         android:text="Take Picture"
         android:textAllCaps="false"
         android:textSize="21sp"
-        android:textStyle="bold" />
-<!--
-    <Button
-        android:id="@+id/video"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="-5dp"
-        android:text="Watch Video"
-        android:textAllCaps="false"
-        android:textSize="21sp"
-        android:textStyle="bold" />
--->
+        android:textStyle="bold"
+        android:background="@drawable/button_background"/>
+    <!--
+        <Button
+            android:id="@+id/video"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="-5dp"
+            android:text="Watch Video"
+            android:textAllCaps="false"
+            android:textSize="21sp"
+            android:textStyle="bold" />
+    -->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="370sp"
@@ -82,4 +83,3 @@
         />
 
 </RelativeLayout>
-
