--- a/app/src/main/res/layout/activity_flower_dic.xml
+++ b/app/src/main/res/layout/activity_flower_dic.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,53 +5,68 @@
     android:layout_height="match_parent"
     tools:context=".FlowerDicActivity"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@android:color/white">
 
     <EditText
         android:id="@+id/edit_text_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Flower Name"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColorHint="@android:color/darker_gray"
+        android:textColor="@android:color/black"
+        android:backgroundTint="@android:color/darker_gray" />
 
     <EditText
         android:id="@+id/edit_text_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Flower Description"
-        android:inputType="text" />
+        android:inputType="text"
+        android:textColorHint="@android:color/darker_gray"
+        android:textColor="@android:color/black"
+        android:backgroundTint="@android:color/darker_gray" />
 
     <EditText
         android:id="@+id/edit_text_priority"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Flower Size in centimeter"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textColorHint="@android:color/darker_gray"
+        android:textColor="@android:color/black"
+        android:backgroundTint="@android:color/darker_gray" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="addNote"
-        android:text="Add" />
+        android:text="Add"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button_background"
+        android:layout_marginBottom="5dp"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="loadNotes"
-        android:text="Load Next" />
+        android:text="Load Next"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button_background" />
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/text_view_data"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textColor="@android:color/black" />
 
     </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
-
-
