--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,175 +10,167 @@
         android:layout_above="@id/commentsLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:orientation="vertical">
-           <!-- Actual Post -->
-           <androidx.cardview.widget.CardView
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <!-- Actual Post -->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="3dp"
+                app:cardElevation="3dp"
+                app:contentPadding="5dp"
+                app:cardUseCompatPadding="true"
+                app:cardBackgroundColor="@color/white">
 
-               app:cardCornerRadius="3dp"
-               app:cardElevation="3dp"
-               app:contentPadding="5dp"
-               app:cardUseCompatPadding="true"
-               app:cardBackgroundColor="@color/white">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-               <LinearLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
 
-                   <LinearLayout
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:orientation="horizontal"
-                       android:gravity="center_vertical">
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/uPictureIv"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/ic_default_img"
+                            android:scaleType="centerCrop" />
 
-                       <de.hdodenhof.circleimageview.CircleImageView
-                           android:id="@+id/uPictureIv"
-                           android:layout_width="50dp"
-                           android:layout_height="50dp"
-                           android:src="@drawable/ic_default_img"
-                           android:scaleType="centerCrop"/>
-                       <LinearLayout
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:orientation="vertical"
-                           android:layout_weight="1">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_weight="1">
 
-                           <TextView
-                               android:id="@+id/uNameTv"
-                               android:text="Name"
-                               android:textColor="@color/black"
-                               android:textSize="20sp"
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content" />
-                           <TextView
-                               android:id="@+id/pTimeTv"
-                               android:text="33min"
+                            <TextView
+                                android:id="@+id/uNameTv"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Name"
+                                android:textColor="@color/black"
+                                android:textSize="20sp" />
 
-                               android:layout_width="wrap_content"
-                               android:layout_height="wrap_content" />
+                            <TextView
+                                android:id="@+id/pTimeTv"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="33min" />
 
+                        </LinearLayout>
 
-                       </LinearLayout>
+                        <ImageButton
+                            android:id="@+id/moreBtn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:src="@drawable/ic_more_black" />
 
-                       <ImageButton
-                           android:id="@+id/moreBtn"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:background="@null"
-                           android:src="@drawable/ic_more_black"/>
+                    </LinearLayout>
 
+                    <TextView
+                        android:id="@+id/pTitleTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:text="Title"
+                        android:autoLink="all" />
 
+                    <TextView
+                        android:id="@+id/pDescriptionTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:text="Description"
+                        android:autoLink="all" />
 
-                   </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
-                   <TextView
-                       android:id="@+id/pTitleTv"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:textSize="16sp"
-                       android:textStyle="bold"
-                       android:text="Title"
-                       android:autoLink="all" />
+                        <TextView
+                            android:id="@+id/pLikesTv"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textColor="@color/purple_200"
+                            android:text="1.2k Likes" />
 
-                   <TextView
-                       android:id="@+id/pDescriptionTv"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:textSize="16sp"
-                       android:textStyle="bold"
-                       android:text="Description"
-                       android:autoLink="all"/>
-                   <!--<ImageView
-                       android:layout_width="match_parent"
-                       android:layout_height="200dp"></ImageView> -->
-               <LinearLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:orientation="horizontal">
-                   <TextView
-                       android:id="@+id/pLikesTv"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:layout_weight="1"
-                       android:textColor="@color/purple_200"
-                       android:text="1.2k Likes"></TextView>
-                   <TextView
-                       android:id="@+id/pCommentsTv"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:layout_weight="1"
-                       android:textAlignment="textEnd"
-                       android:layout_gravity="end"
-                       android:textColor="@color/purple_200"
-                       android:text="1.2k Comments"></TextView>
+                        <TextView
+                            android:id="@+id/pCommentsTv"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textAlignment="textEnd"
+                            android:textColor="@color/purple_200"
+                            android:text="1.2k Comments" />
 
-               </LinearLayout>
+                    </LinearLayout>
 
-                   <View
-                       android:layout_width="match_parent"
-                       android:layout_height="1dp"
-                       android:background="#F5F0F0">
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="#F5F0F0" />
 
-                   </View>
-                   <LinearLayout
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:orientation="horizontal"
-                       android:gravity="center">
-                       <Button
-                           android:id="@+id/likeBtn"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:layout_weight="1"
-                           android:text="LIKE"
-                           android:drawableLeft="@drawable/ic_like_black"
-                           android:background="@color/white"
-                           android:drawablePadding="5dp"
-                           android:drawableStart="@drawable/ic_like_black"></Button>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center">
 
+                        <Button
+                            android:id="@+id/likeBtn"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="LIKE"
+                            android:drawableLeft="@drawable/ic_like_black"
+                            android:drawablePadding="5dp"
+                            android:background="@color/white"
+                            android:drawableStart="@drawable/ic_like_black" />
 
+                        <Button
 
-                       <Button
-                           app:backgroundTint="@color/light_grey"
-                           android:id="@+id/shareBtn"
-                           android:layout_width="wrap_content"
-                           android:layout_height="wrap_content"
-                           android:layout_weight="1"
-                           android:text="SHARE"
-                           android:drawableLeft="@drawable/ic_share_black"
-                           android:background="@color/white"
-                           android:drawablePadding="5dp"
-                           android:drawableStart="@drawable/ic_share_black">
-                           </Button>
+                            android:id="@+id/shareBtn"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="SHARE"
+                            android:drawableLeft="@drawable/ic_share_black"
+                            android:drawablePadding="5dp"
+                            android:background="@color/white"
+                            android:drawableStart="@drawable/ic_share_black" />
 
-                   </LinearLayout>
+                    </LinearLayout>
 
+                </LinearLayout>
 
-               </LinearLayout>
+            </androidx.cardview.widget.CardView>
+            <!--List of comments-->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Comments"
+                android:textColor="@color/black"
+                android:drawableStart="@drawable/ic_comments_black"
+                android:drawablePadding="5dp"
+                android:padding="2dp"
+                android:drawableLeft="@drawable/ic_comments_black" />
 
-           </androidx.cardview.widget.CardView>
-           <!--List of comments-->
-           <TextView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:text="Comments"
-               android:textColor="@color/black"
-               android:drawableStart="@drawable/ic_comments_black"
-               android:drawablePadding="5dp"
-               android:padding="2dp"
-               android:drawableLeft="@drawable/ic_comments_black">
-           </TextView>
-           <androidx.recyclerview.widget.RecyclerView
-               android:id="@+id/recyclerView"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-       </LinearLayout>
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
     <RelativeLayout
@@ -193,7 +184,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_default_img"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
 
         <EditText
             android:id="@+id/commentEt"
@@ -206,19 +197,17 @@
             android:hint="Enter Comment..."
             android:layout_centerVertical="true"
             android:background="@color/white"
-            android:inputType="textCapSentences|textMultiLine">
+            android:inputType="textCapSentences|textMultiLine" />
 
-        </EditText>
         <ImageButton
             android:id="@+id/sendBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_send"
             android:background="@color/white"
-            android:layout_centerVertical="true"></ImageButton>
+            android:layout_centerVertical="true" />
 
     </RelativeLayout>
 
