--- a/app/src/main/res/layout/display_row.xml
+++ b/app/src/main/res/layout/display_row.xml
@@ -1,20 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp"
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/flower_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@android:color/black" />
 
-        android:textSize="20sp"/>
     <TextView
         android:id="@+id/flower_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:textSize="15dp"/>
+        android:textSize="15dp"
+        android:textColor="@android:color/darker_gray" />
 
 </LinearLayout>
