--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="3dp"
-    app:contentPadding="5dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
+    app:contentPadding="8dp"
     app:cardUseCompatPadding="true"
-    app:cardBackgroundColor="@color/white">
+    app:cardBackgroundColor="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,27 +24,28 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/ic_default_img"
-                android:scaleType="centerCrop"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:scaleType="centerCrop" />
 
-              <TextView
-                  android:id="@+id/uNameTv"
-                  android:text="Name"
-                  android:textColor="@color/black"
-                  android:textSize="20sp"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/uNameTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
                 <TextView
                     android:id="@+id/pTimeTv"
-                    android:text="33min"
-
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
+                    android:layout_height="wrap_content"
+                    android:text="33min"
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
@@ -54,9 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:src="@drawable/ic_more_black"/>
-
-
+                android:src="@drawable/ic_more_black" />
 
         </LinearLayout>
 
@@ -76,7 +74,8 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:text="Description"
-            android:autoLink="all"/>
+            android:autoLink="all" />
+
         <TextView
             android:id="@+id/prating"
             android:layout_width="match_parent"
@@ -84,81 +83,77 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:text="Rating"
-            android:autoLink="all"/>
-        <!--<ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"></ImageView> -->
+            android:autoLink="all" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/pLikesTv"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@color/purple_200"
-                android:text="1.2k Likes"></TextView>
+                android:textColor="@android:color/holo_purple"
+                android:text="1.2k Likes" />
+
             <TextView
                 android:id="@+id/pCommentsTv"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAlignment="textEnd"
-                android:layout_gravity="end"
-                android:textColor="@color/purple_200"
-                android:text="1.2k Comments"></TextView>
+                android:textColor="@android:color/holo_purple"
+                android:text="1.2k Comments" />
 
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#F5F0F0">
+            android:background="#F5F0F0" />
 
-        </View>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center">
+
             <Button
                 android:id="@+id/likeBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="LIKE"
+                android:textColor="@android:color/white"
                 android:drawableLeft="@drawable/ic_like_black"
-                android:background="@color/white"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/ic_like_black"
-                android:focusable="false"
-                android:focusableInTouchMode="false"></Button>
+                android:drawablePadding="0dp"
+                android:background="@android:color/white" />
 
             <Button
                 android:id="@+id/commentBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="COMMENT"
+                android:textColor="@android:color/white"
                 android:drawableLeft="@drawable/ic_comment_black"
-                android:background="@color/white"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/ic_comment_black"></Button>
+                android:drawablePadding="0dp"
+                android:background="@android:color/white" />
 
             <Button
                 android:id="@+id/shareBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="SHARE"
+                android:textColor="@android:color/white"
                 android:drawableLeft="@drawable/ic_share_black"
-                android:background="@color/white"
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/ic_share_black"></Button>
+                android:drawablePadding="0dp"
+                android:background="@android:color/white" />
 
         </LinearLayout>
-
 
     </LinearLayout>
 
